Closed
Bug 1643347
Opened 6 years ago
Closed 6 years ago
[-Werror,-Wuninitialized-const-reference] on ContentPrincipal.cpp
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox79 fixed)
RESOLVED
FIXED
mozilla79
| Tracking | Status | |
|---|---|---|
| firefox79 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: Sylvestre)
References
Details
Attachments
(1 file)
In file included from Unified_cpp_caps0.cpp:2:
/var/lib/jenkins/workspace/firefox-clang-lld-last/caps/ContentPrincipal.cpp:68:13: error: variable 'hasFlag' is uninitialized when passed as a const reference argument here [-Werror,-Wuninitialized-const-reference]
Unused << hasFlag; // silence possible compiler warnings.
^~~~~~~
not sure why it is regressing now
| Assignee | ||
Comment 1•6 years ago
|
||
not sure why it is regressing now
Looks like a brand-new warning: https://github.com/llvm/llvm-project/commit/170b6869b563dd3393d99f3e03d389b9058d5f24
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a680dbc851bf
set hasFlag default value to avoid a -Wuninitialized-const-reference warning in ContentPrincipal.cpp r=dmajor
Comment 4•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox79:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Updated•3 years ago
|
Product: Firefox Build System → Developer Infrastructure
You need to log in
before you can comment on or make changes to this bug.
Description
•