Bug 1643347 - set hasFlag default value to avoid a -Wuninitialized-const-reference warning in ContentPrincipal.cpp r=dmajor

Differential Revision: https://phabricator.services.mozilla.com/D78289